# lab_scopes

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: rigol_dho800_investigation.md  rigol_full_memory_acquisition_plan.md
examples/: lecroy_acquire.py  lecroy_read_hdf5.py  lecroy_read_trc.py
src/: LeCroy_Scope.py  LeCroy_Scope_Header.py  read_scope_data.py  rigol_dho800.py  rigol_scope.py
src/lab_scopes/: __init__.py  errors.py  waveform.py
src/lab_scopes/io/: __init__.py  hdf5.py  lecroy_files.py
src/lab_scopes/lecroy/: __init__.py  constants.py  header.py  legacy.py  scope.py  sequence.py  wavedesc.py
src/lab_scopes/rigol/: __init__.py  dho800.py  legacy.py
src/lab_scopes/transports/: __init__.py  lecroy_vicp.py  rigol_functions.py  socket_scpi.py
tests/: conftest.py  test_imports_no_pyvisa.py  test_lecroy_arm_sync.py  test_lecroy_averaging_real.py  test_lecroy_channel_detect.py  test_lecroy_hdf5_reader.py  test_lecroy_header.py  test_lecroy_scope_acquire.py  test_lecroy_scope_real.py  test_lecroy_sequence_real.py  test_lecroy_trc_reader.py  test_lecroy_vicp_framing.py  test_legacy_imports.py  test_report.txt  test_rigol_chunked_read.py  test_rigol_imports.py  test_rigol_scope_real.py
