[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-scopes"
version = "0.2.1"
description = "Reusable oscilloscope drivers and offline readers for lab data."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "LAPD/BaPSF contributors"},
]
dependencies = [
  "numpy",
]

[project.optional-dependencies]
hdf5 = ["h5py"]
plot = ["matplotlib"]
dev = ["pytest", "h5py"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "LeCroy_Scope",
  "LeCroy_Scope_Header",
  "read_scope_data",
  "rigol_dho800",
  "rigol_scope",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
