[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-scopes"
version = "0.4.0"
description = "Reusable oscilloscope drivers and offline readers for lab data."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "LAPD/BaPSF contributors"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "numpy",
]

[project.optional-dependencies]
hdf5 = ["h5py"]
plot = ["matplotlib"]
dev = ["pytest", "h5py"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "LeCroy_Scope",
  "LeCroy_Scope_Header",
  "read_scope_data",
  "rigol_dho800",
  "rigol_scope",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
